src/pages/fr/v1.12.0/installation/identify-user.mdx
---
titre: "Identifier un utilisateur"
metaTitle: "Identifier un utilisateur"
metaDescription: "Comment associer un ID d'utilisateur interne à l'enregistrement de la session."
---
import YoutubeVideo from '~/components/YoutubeVideo.astro'

<YoutubeVideo title="Regardez comment identifier les utilisateurs dans vos reprises"
  description="Si vous n'aimez pas lire, vous pouvez suivre ce tutoriel vidéo qui vous montre comment associer vos reprises à vos utilisateurs."
  videoURL="https://youtu.be/xfotXkeyXZM"
/>

Associez votre ID d'utilisateur interne à la session enregistrée en suivant les étapes ci-dessous.

### Avec NPM

Injectez l'ID d'utilisateur au démarrage du suivi:


```js
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY
});

tracker.start({
  userID: "john@doe.com",
  metadata: {
    balance: "10M",
    plan: "free"
  }
});
```


Si cela n'est pas possible (l'ID d'utilisateur est connu plus tard dans le flux de navigation, donc bien après le démarrage du suivi), appelez alors la méthode `setUserID` pour identifier vos utilisateurs. L'identité de l'utilisateur peut être modifiée à tout moment pendant la session en appelant `setUserID`. Cependant, OpenReplay ne conservera que le dernier ID d'utilisateur injecté.


```js
tracker.setUserID('john@doe.com'); // after tracker.start()
```


### Avec le snippet JavaScript

Voici un exemple de comment injecter l'ID d'utilisateur à l'aide du snippet. Notez la variable/ligne `startOpts` pour injecter l'ID d'utilisateur.


```js
<!-- OpenReplay Tracking Code -->
<script>
var initOpts = { projectKey: "GxPpaDARdn2345fgt321" };
var startOpts = { userID: getUserID() }; // use startOpts variable to inject userID
(function(A,s,a,y,e,r){
  r=window.OpenReplay=[e,r,y,[s-1, e]];
  s=document.createElement('script');s.src=A;s.async=!a;
  ...
})("//static.openreplay.com/latest/openreplay.js", 1, 0, initOpts, startOpts);
</script>
```


Si cela n'est pas possible (l'ID d'utilisateur est connu plus tard dans le flux de navigation, donc bien après le démarrage du suivi), appelez alors la méthode `setUserID` pour identifier vos utilisateurs. L'identité de l'utilisateur peut être modifiée à tout moment pendant la session en appelant `setUserID`. Cependant, OpenReplay ne conservera que le dernier ID d'utilisateur injecté.


```js
<!-- OpenReplay Tracking Code -->
<script>
var initOpts = { projectKey: "GxPpaDARdn2345fgt321" };
var startOpts = { userID: "" };
(function(A,s,a,y,e,r){
  r=window.OpenReplay=[e,r,y,[s-1, e]];
  s=document.createElement('script');s.src=A;s.async=!a;
  ...
})("//static.openreplay.com/latest/openreplay.js", 1, 0, initOpts, startOpts);
</script>
  ...
  OpenReplay.setUserID("john@doe.com"); // set the userID later in your code
  ...
```

